[build-system]
requires = ["setuptools>=64", "wheel", "versioneer[toml]>=0.22"]
build-backend = "setuptools.build_meta"

[project]
name = "arkouda"
dynamic = ["version"]                # <-- Versioneer will supply this
description = "Parallel, distributed NumPy-like arrays backed by Chapel"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "U.S. Government" }]
keywords = ["HPC","workflow","exploratory","analysis","parallel","distribute","arrays","Chapel"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
]

# keep your dependencies/optional-dependencies blocks here;
# importantly: DO NOT list "versioneer" as a runtime dependency



dependencies = [
  "numpy>=2.0",
  "pandas>=1.4.0,!=2.2.0",
  "pyzmq>=20.0.0",
  "typeguard==2.10.0",
  "tabulate",
  "pyfiglet",
  "matplotlib>=3.3.2",
  "h5py>=3.7.0",
  "pip",  # Consider removing if not truly required at runtime
  "types-tabulate",
  "tables>=3.10.0",
  "pyarrow<21.0.0,>=6.0.1",
  "scipy",
  "cloudpickle",
]

[project.optional-dependencies]
dev = [
  "pexpect",
  "pytest>=6.0",
  "pytest-env",
  "pytest-timeout",
  "pytest-html",
  "pytest-benchmark",
  "pytest-json-report",
  "pytest-subtests",
  "Sphinx>=5.1.1",
  "sphinx-argparse",
  "sphinx-autoapi",
  "mypy>=0.931",
  "black==25.1.0",
  "ruff==0.11.2",
  "isort==5.13.2",
  "flake8",
  "furo",
  "myst-parser",
  "linkify-it-py",
  "mathjax",
  "sphinx-autopackagesummary",
  "sphinx-design",
  "sphinx-autodoc-typehints",
  "pandas-stubs",
  "types-python-dateutil",
  "ipython",
  "pydocstyle>=6.3.0",
  "pre-commit",
  "darglint>=1.8.1",
  "pydoclint[flake8]==0.6.10",
  "numba",
]


[project.urls]
Homepage = "https://github.com/Bears-R-Us/arkouda"
"Bug Reports" = "https://github.com/Bears-R-Us/arkouda/issues"
Source = "https://github.com/Bears-R-Us/arkouda"
Chapel = "https://chapel-lang.org"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]

# Versioneer 0.22+ reads config from TOML:
[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "arkouda/_version.py"
versionfile_build  = "arkouda/_version.py"
tag_prefix = ""                     # "" if your tags look like v1.2.3 or 1.2.3; set "v" if needed
parentdir_prefix = "arkouda-"


[tool.isort]
profile = "black"
line_length = 105
known_first_party = ["arkouda"]
combine_as_imports = true
force_sort_within_sections = true
lines_after_imports = 1
skip = [
  "build",
  ".bzr",
  "node_modules",
  "buck-out",
  ".pytype",
  "__pypackages__",
  ".svn",
  ".tox",
  ".mypy_cache",
  ".git",
  ".hg",
  ".direnv",
  ".pants.d",
  ".venv",
  ".nox",
  "dist",
  ".eggs",
  "venv",
  "_build",
  "runs",
  "toys",
]
extend_skip_glob = [
  ".venv/*",
  "*.pyi",
  "dep/*",
  "*__init__.py",
  "*deprecated*",
  "arkouda/versioneer.py",
  "arkouda/toys/*",
  "arkouda/benchmark_v2/*",
  "arkouda/server_util/test/*",
]

[tool.flake8]
max-line-length = 105
application-import-names = "arkouda"
# keep all the default checks, plus F403 for "import *"
extend-select = ["F403"]
extend-ignore = [
  "A001","A002","A003","A004","A005",
  "B018","B006","B007","B008","B009","B010","B012","B014","B028","B033",
  "I300","I100","I101","I201","I202",
  "E203","E501","E712","W605",
  "D103","D100","D101","D102","D104","D105","D106","D107",
  "D200","D201","D202","D203","D205","D400","D401","D402","D412",
  "DOC106","DOC101","DOC001","DOC102","DOC103","DOC105","DOC107","DOC109","DOC110","DOC201","DOC203","DOC301","DOC302","DOC501","DOC502","DOC503","DOC601","DOC603",
]

per-file-ignores = [
  "tests/operator_test.py: E501",
  "tests/symbol_table_test.py: F841",
]

exclude = [
  "toys",
  "tests/deprecated",
  "src/registry/register_commands.py",
  "src/parseServerConfig.py",
  "runs",
  "dep",
  "examples",
  "benchmarks",
]

    
[tool.pydocstyle]
convention = "numpy"
match-dir = "arkouda"


    
[tool.darglint]
# How strictly to enforce: none, short, full
strictness = "full"
# Which docstring style: google, sphinx, or numpy
docstring_style = "numpy"
# List of error codes to ignore
ignore = [
  "DAR402","DAR103","DAR101","DAR002","DAR201","DAR401","DAR102"
]

# (optional) keep Ruff away from vendored trees too
[tool.ruff]
extend-exclude = ["dep"]

